--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/style.css" />
     <%-include('./inc/head') %>
   </head>
   <body>
     <%-include('./inc/nav') %>
+    <br>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <h1>Hakkımızda</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              impedit expedita aspernatur laborum ad veniam corporis harum
+              perferendis totam adipisci. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Obcaecati dolores vel unde corporis. Pariatur,
+              quos maiores? Modi, ducimus expedita consequatur optio eos vitae?
+              Ad sapiente accusantium fugiat, magnam voluptatibus incidunt?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              perferendis facere eligendi, libero quasi atque repellat dolore
+              commodi assumenda accusamus. Veritatis soluta, ducimus quis ipsa
+              deserunt sapiente vitae ullam ab saepe est. Neque quasi assumenda
+              adipisci laudantium magni nostrum incidunt vero, blanditiis ipsa
+              deleniti alias aperiam, repudiandae velit. Voluptate, cum!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <%-include('./inc/footer') %>
   </body>
-  <section>
-    <h1>Hakkımızda</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit
-      expedita aspernatur laborum ad veniam corporis harum perferendis totam
-      adipisci.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis veniam
-      quaerat consequuntur, exercitationem repudiandae perspiciatis.
-    </p>
-  </section>
 </html>
