--- a/views/inc/nav.ejs
+++ b/views/inc/nav.ejs
@@ -1,12 +1,60 @@
 <nav>
   <h1>Node Blog</h1>
-  <ul>
-    <li><a href="/">Ana Sayfa</a></li>
-    <li><a href="/about">Hakkımızda</a></li>
-    <% if(user) { %>
-    <li><a href="/logout">Logout</a></li>
-    <% }else { %>
-    <li><a href="/login">Login</a></li>
-    <% } %>
-  </ul>
+  <head>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">NODE BLOG</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/blog"
+                >Ana Sayfa</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about">Hakkımızda</a>
+            </li>
+            <% if(user) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Çıkış Yap</a>
+            </li>
+            <% }else { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Giriş Yap</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">Kayıt Ol</a>
+            </li>
+            <% } %>
+            <ul></ul>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
+ 
 </nav>
