Work continues for front end

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
   class="
     d-flex
     flex-wrap
-    justify-content-between
+    justify-content-betweenf
     align-items-center
     py-3
     my-4
