--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,6 @@
 html,
 body {
   height: 100%;
-
 }
 
 .form-signin {
@@ -67,4 +66,8 @@ body {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
+}
+
+.nav-item dropdown {
+  padding-left: 30px;
 }
