--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,14 +1,37 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <%-include('./inc/head') %>
-  </head>
-  <body>
-    <%-include('./inc/nav') %>
-  </body>
-  <section>
-    <h1><%= blog.title %></h1>
-    <p><%= blog.long %></p>
-  
-  </section>
-</html>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <%-include('./inc/nav') %>
+  <main>
+    <div class="container py-4">
+      <div class="row">
+        <div class="col-sm">
+          <div class="row g-5">
+            <div class="col-md-8">
+              <h3 class="pb-4 mb-4 fst-italic border-bottom">
+                <%= blog.title %>
+              </h3>
+              <article class="blog-post">
+                <h2 class="blog-post-title">
+                  <%= blog.title %>
+                </h2>
+                <p class="blog-post-meta"><%= blog.createdAt %><a href="#">Mark</a></p>
+                <p>
+                  <%= blog.long %>
+                </p>
+                <hr>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+</body>
+</html>l
