--- a/views/inc/footer.ejs
+++ b/views/inc/footer.ejs
@@ -16,7 +16,7 @@
 
   <footer class="footer mt-auto py-3 bg-dark">
     <div class="container">
-      <span class="text-muted">Place sticky footer content here.</span>
+      <span class="text-muted">Node Blog Projesi 2020-2021</span>
     </div>
   </footer>
 </body>
