--- a/views/inc/nav.ejs
+++ b/views/inc/nav.ejs
@@ -1,11 +1,22 @@
 <nav>
   <h1>Node Blog</h1>
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+      crossorigin="anonymous"
+    ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,16 +43,31 @@
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/blog"
-                >Ana Sayfa</a
+                ><i class="bi bi-house-door-fill"></i> Ana Sayfa</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">Hakkımızda</a>
+              <a class="nav-link" href="/about"
+                ><i class="bi bi-house-door-fill"></i> Hakkımızda</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about"
+                ><i class="bi bi-house-door-fill"></i> Yazı Ekle</a
+              >
             </li>
             <% if(user) { %>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Çıkış Yap</a>
-            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/profile"
+                ><i class="bi bi-house-door-fill"></i> Profilin</a
+              >
+            </li> -->
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/logout"
+                ><i class="bi bi-house-door-fill"></i> Çıkış Yap</a
+              >
+            </li> -->
+
             <% }else { %>
             <li class="nav-item">
               <a class="nav-link" href="/login">Giriş Yap</a>
@@ -54,7 +80,35 @@
           </ul>
         </div>
       </div>
+      <% if(user) { %>
+      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        <ul
+          class="nav col-12 justify-content-center"
+          style="padding-right: 175px"
+        >
+          <li class="nav-item dropdown">
+            <a
+              href="#"
+              id="navbarDarkDropdownMenuLink"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <button type="button" class="btn btn-primary">Ayarlar</button>
+            </a>
+
+            <ul
+              class="dropdown-menu dropdown-menu-dark"
+              aria-labelledby="navbarDarkDropdownMenuLink"
+            >
+              <li><a class="dropdown-item" href="/profile">Profil</a></li>
+              <li><a class="dropdown-item" href="/settings">Ayarlar</a></li>
+              <li><a class="dropdown-item" href="/logout">Çıkış Yap</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <% } %>
     </nav>
   </body>
- 
 </nav>
