--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/style.css" />
-    <%-include('./inc/head') %>
-  </head>
-  <body>
-    <%-include('./inc/nav') %>
+
+<head>
+  <link rel="stylesheet" href="/style.css" />
+  <%-include('./inc/head') %>
+</head>
+
+<body>
+  <%-include('./inc/nav') %>
     <br />
     <section>
       </div>
@@ -13,39 +15,48 @@
     <main role="main">
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Yazılar</h1>
+          <h1 class="display-3">Node Blog Nedir?</h1>
           <p>
-          
-            This is a template for a simple marketing or informational website.
-            It includes a large callout called a jumbotron and three supporting
-            pieces of content. Use it as a starting point to create something
-            more unique.
+
+            Bu proje tamamen ücretsiz bir şekilde blog yazıları yayınlayabilmenize imkan vermektedir !
           </p>
           <p>
-            <a class="btn btn-primary btn-lg" href="#" role="button"
-              >Learn more &raquo;</a
-            >
+            <a class="btn btn-primary btn-lg" href="/about" role="button">Daha Fazla Detay</a>
           </p>
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-              <% blogs.forEach(blog => { %>
-            <h2><%=blog.title%></h2>
-            <p>
-              <%=blog.short%>
-            </p>
-            <p>
-              <a class="btn btn-secondary" href="/blog/<%=blog._id%>" role="button"
-                >View details &raquo;</a
-              >
-            </p>
-            <% }) %>
-          </div>
-        </div>
+        <main>
+          <div class="container py-4">
+            <header class="pb-3 mb-4 border-bottom">
+            
+            </header>
+        
+            <div class="p-5 mb-4 bg-light rounded-3">
+              
+              <% blogs.slice(-3).forEach(blog => { %>
+              <div class="container-fluid py-5 ">
+                <h1 class="display-5 fw-bold"><%=blog.title%></h1>
+                <p class="col-md-8 fs-4"><%=blog.long%></p>
+              </div>
+              <p>
+                <a class="btn btn-primary btn-lg" href="/blog/<%=blog._id%>" role="button"
+                  >Yazıyı İncele &raquo;</a
+                >
+              </p>
+              <% }) %>
+        
+            </div>
+
+          <header class="pb-3 mb-4 border-bottom">
+            
+          </header>
+      
+        </main>
+    
       </div>
     </main>
     <%-include('./inc/footer') %>
-  </body>
+</body>
+
 </html>
