User Profile Settings Set..

--- a/views/inc/nav.ejs
+++ b/views/inc/nav.ejs
@@ -48,7 +48,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about"
-                ><i class="bi bi-house-door-fill"></i> Hakkımızda</a
+                ><i class="bi bi-file-person-fill"></i> Hakkımızda</a
               >
             </li>
             <li class="nav-item">
@@ -70,10 +70,14 @@
 
             <% }else { %>
             <li class="nav-item">
-              <a class="nav-link" href="/login">Giriş Yap</a>
+              <a class="nav-link" href="/login"
+                ><i class="bi bi-caret-right-fill"></i> Giriş Yap</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/signup">Kayıt Ol</a>
+              <a class="nav-link" href="/signup"
+                ><i class="bi bi-chat-square-text-fill"></i> Kayıt Ol</a
+              >
             </li>
             <% } %>
             <ul></ul>
