--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,8 @@
           <h1 class="display-3">Node Blog Nedir?</h1>
           <p>
 
-            Bu proje tamamen ücretsiz bir şekilde blog yazıları yayınlayabilmenize imkan vermektedir !
+            Bu proje tamamen ücretsiz bir şekilde blog yazıları yayınlayabilmenize imkan vermektedir. 
+            Tek yapmanız gereken üye olup her hangi bir konu hakkında yazınızı yayınlamanız.
           </p>
           <p>
             <a class="btn btn-primary btn-lg" href="/about" role="button">Daha Fazla Detay</a>
