--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -52,7 +52,6 @@
                   />
                   <label for="floatingEmail">Email</label>
                 </div>
-                <br />
                 <div class="form-floating">
                   <input
                     type="password"
@@ -61,8 +60,10 @@
                     id="floatingPassword"
                     placeholder="Password"
                   />
-                  <label for="floatingPassword">Şifre</label>
+                  <label for="floatingEmail">Password</label>
                 </div>
+                <br />
+
                 <br />
 
                 <button
