--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,45 +15,52 @@
     </div>
     <%-include('./inc/nav') %>
     <section>
-        <div class="container rounded bg-white mt-5 mb-5">
+        <div class="container rounded bg-white mt-5 mb-5" >
             <div class="row">
-                <div class="col-md-3 border-right">
-                    <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
-                </div>
-                <div class="col-md-5 border-right">
-                    <div class="p-3 py-5">
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <h4 class="text-right">Profil Ayarlarınız</h4>
-                        </div>
-                        <div class="row mt-2">
-                            <div class="col-md-6"><label class="labels">İsim</label><input type="text" class="form-control" placeholder="İsminiz" value=""></div>
-                            <div class="col-md-6"><label class="labels">Soyisim</label><input type="text" class="form-control" value="" placeholder="Soyisminiz"></div>
-                        </div>
+                <div class="col-md-5 border-right" style="padding-top: 45px;" >
                     
-                        <div class="row mt-3">
-                            <div class="col-md-12"><label class="labels">Telefon Numarası</label><input type="text" class="form-control" placeholder="Telefon numarası" value=""></div>
-                           
-                            <div class="col-md-12"><label class="labels">Eğitim</label><input type="text" class="form-control" placeholder="Eğitim aldığınız yüksek okul etc." value=""></div>
+                    <div class="container mt-4 mb-4 p-3 d-flex justify-content-center"  >
+                        <div class="card p-4" style="border-radius: 50px;">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h3 style="margin-left: 130px;"><i class="bi bi-gear-fill""></i> Bilgileriniz </h3>
+                            </div>
+            
+                            <div class=" image d-flex flex-column justify-content-center align-items-center"> <button class="btn btn-secondary"> <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" /></button> 
+                                <span class="name mt-3"><span> <strong>İsminiz :</strong> </span><%= user.username %></span>  <span class="idd"> <span> <strong>Email :</strong> </span> <%= user.email %></span>
+                                 <span><strong>Sistem Rolü :</strong> <%= user.role %> </span> 
+                            
+                                
+                                <span class="idd1" style="padding-left: 25px;"><strong> Hesap oluşturma tarihi :  </strong><%= user.createdAt %></span> <span><i class="fa fa-copy"></i></span>
+
+                                <span class="idd1" style="padding-left: 25px;"><strong> Eğitim :  </strong><%= user.education %></span> <span><i class="fa fa-copy"></i></span>
+
+                                <span class="idd1" style="padding-left: 25px;"><strong> Ülke :  </strong><%= user.state %></span> <span><i class="fa fa-copy"></i></span>
+
+                                <span class="idd1" style="padding-left: 25px;"><strong> Şehir :  </strong><%= user.region %></span> <span><i class="fa fa-copy"></i></span>
+
+                                <span class="idd1" style="padding-left: 25px;"><strong> Telefon :  </strong><%= user.phoneNumber %></span> <span><i class="fa fa-copy"></i></span>
+                                
+                                <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span><i class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span> </div>
+                                
+                            </div>
                         </div>
-                      
-                        <div class="row mt-3">
-                            <div class="col-md-6"><label class="labels">Ülke</label><input type="text" class="form-control" placeholder="Ülke" value=""></div>
-                            <div class="col-md-6"><label class="labels">Mahalle / İlçe </label><input type="text" class="form-control" value="" placeholder="Mahalle / İlçe"></div>
-                        </div>
-                        <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Ayarları Kayıt Et</button></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                
+                <div class="col-md-5 border-right">
+                    <div class="card p-4" style="border-radius: 50px;">
                     <div class="p-3 py-5">
-                        <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                        <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
-                        <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <h3><i class="bi bi-gear-fill" style="padding-top: 10px;"></i> Ayarları Güncelle</h3>
+                        </div>
+                    
+                    </div>
                     </div>
                 </div>
             </div>
         </div>
         </div>
-        </div>
+        </div> 
     </section>
     <%-include('./inc/footer') %>
   </body>
